--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.0.7",
+    "@openzeppelin/contracts": "^4.8.2",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -30,6 +31,7 @@
     "solc": "^0.8.19",
     "swr": "^2.0.0",
     "typescript": "4.9.4",
+    "web-vitals": "^3.3.0",
     "web3": "^1.8.2"
   }
 }
